--- a/index.html
+++ b/index.html
@@ -1,13 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>yo</h1>
-    <p>yo</p>
-</body>
+  </head>
+  <body>
+    <section>
+      <nav>
+        <img src="/assets/FES.svg" alt="Front End Simplified" />
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#discord">Discord</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+      <header>
+        <div>
+          <h1>Best Place to Learn Front-End</h1>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore,
+            voluptatem assumenda vero recusandae corporis quisquam.
+          </p>
+          <button>Start Now!</button>
+        </div>
+        <figure>
+          <img src="./assets/laptop.png" alt="Home Page Image" />
+        </figure>
+      </header>
+    </section>
+
+    <main>
+      <section id="about">
+        <h2>About</h2>
+        <div>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore
+            voluptate doloribus ratione impedit id fugiat.
+          </p>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore
+            voluptate doloribus ratione impedit id fugiat.
+          </p>
+        </div>
+        <figure>
+          <img src="./assets/about.jpg" alt="" />
+        </figure>
+      </section>
+      <section id="discord">
+        <h2>Discord</h2>
+        <figure>
+          <img src="./assets/discord.png" alt="" />
+        </figure>
+        <div>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore
+            voluptate doloribus ratione impedit id fugiat.
+          </p>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore
+            voluptate doloribus ratione impedit id fugiat.
+          </p>
+        </div>
+      </section>
+      <section id="contact">
+        <h2>Contact</h2>
+        <form action="">
+          <label for="">Email:</label>
+          <input type="text" placeholder="jane@example.com" />
+          <label for="">Message:</label>
+          <textarea name="message" id="" cols="30" rows="10"></textarea>
+        </form>
+      </section>
+    </main>
+    <footer>
+      <img src="./assets/FES.svg" alt="" />
+      <div>
+        <a href="#about">About</a>
+        <a href="#discord">Discord</a>
+        <a href="#contact">Contact</a>
+        <a href="">Courses</a>
+      </div>
+      <p>Copyright Front-End Simplified</p>
+    </footer>
+  </body>
 </html>
