--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <section>
       <nav>
-        <img src="/assets/FES.svg" alt="Front End Simplified" />
+        <img src="/assets/FES.svg" class="logo" alt="Front End Simplified" />
         <ul>
           <li><a href="#about">About</a></li>
           <li><a href="#discord">Discord</a></li>
@@ -17,70 +18,87 @@
         </ul>
       </nav>
       <header>
-        <div>
-          <h1>Best Place to Learn Front-End</h1>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore,
-            voluptatem assumenda vero recusandae corporis quisquam.
-          </p>
-          <button>Start Now!</button>
+        <div class="row">
+          <div>
+            <h1>Best Place to Learn Front-End</h1>
+            <p class="subheader">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Inventore, voluptatem assumenda vero recusandae corporis quisquam.
+            </p>
+            <button>Start Now!</button>
+          </div>
+          <figure>
+            <img src="./assets/laptop.png" alt="Home Page Image" />
+          </figure>
         </div>
-        <figure>
-          <img src="./assets/laptop.png" alt="Home Page Image" />
-        </figure>
       </header>
     </section>
 
     <main>
       <section id="about">
         <h2>About</h2>
-        <div>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore
-            voluptate doloribus ratione impedit id fugiat.
-          </p>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore
-            voluptate doloribus ratione impedit id fugiat.
-          </p>
+        <div class="row">
+          <div class="section__description">
+            <div class="section__description--wrapper">
+              <p class="section__description--para">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Inventore voluptate doloribus ratione impedit id fugiat.
+              </p>
+              <p class="section__description--para">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Inventore voluptate doloribus ratione impedit id fugiat.
+              </p>
+            </div>
+            <figure class="about__img--wrapper">
+              <img src="./assets/about.jpg" alt="" />
+            </figure>
+          </div>
         </div>
-        <figure>
-          <img src="./assets/about.jpg" alt="" />
-        </figure>
       </section>
       <section id="discord">
         <h2>Discord</h2>
-        <figure>
-          <img src="./assets/discord.png" alt="" />
-        </figure>
-        <div>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore
-            voluptate doloribus ratione impedit id fugiat.
-          </p>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore
-            voluptate doloribus ratione impedit id fugiat.
-          </p>
+        <div class="row">
+          <div class="section__description">
+            <figure>
+              <img src="./assets/discord.png" alt="" />
+            </figure>
+            <div>
+              <p class="section__description--para">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Inventore voluptate doloribus ratione impedit id fugiat.
+              </p>
+              <p class="section__description--para">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Inventore voluptate doloribus ratione impedit id fugiat.
+              </p>
+            </div>
+          </div>
         </div>
       </section>
       <section id="contact">
         <h2>Contact</h2>
         <form action="">
           <label for="">Email:</label>
-          <input type="text" placeholder="jane@example.com" />
+          <input type="email" placeholder="jane@example.com" />
           <label for="">Message:</label>
-          <textarea name="message" id="" cols="30" rows="10"></textarea>
+          <textarea
+            name="message"
+            placeholder="get connected now"
+            id=""
+            cols="10"
+            rows="5"
+          ></textarea>
+          <button>Contact Us!</button>
         </form>
       </section>
     </main>
     <footer>
-      <img src="./assets/FES.svg" alt="" />
-      <div>
-        <a href="#about">About</a>
-        <a href="#discord">Discord</a>
-        <a href="#contact">Contact</a>
-        <a href="">Courses</a>
+      <img class="footer_logo" src="./assets/FES.svg" alt="" />
+      <div class="footer_links">
+        <a class="footer_link" href="#about">About</a>
+        <a class="footer_link" href="#discord">Discord</a>
+        <a class="footer_link" href="#contact">Contact</a>
+        <a class="footer_link" href="">Courses</a>
       </div>
       <p>Copyright Front-End Simplified</p>
     </footer>
